tests/NormalTests/paczka1/fuzzy1/80882668.err
Error in line 2: i236D7kP9e A189 75,4
Error in line 8: 3R72YDl A328 87,2
Error in line 16: 3R72YDl S926 1d,d
Error in line 15: wpGK7h S999 40,8
Error in line 28: S926 S926 15,8
Error in line 32: DUk A189 57,0
